[package]
name = "dev_mc"
version = "0.1.0"
authors = ["SimplyCmd <simplycmd00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.14.0" # Gives us egui, epi and web+native backends
image = { version = "0.23", default-features = false, features = ["png"] }

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]